- fixed sound mixing ratios specified in 0x4000082 (thanks Damian)
- simulating memory behaviour when no cartridge present (32-bits still
  incorrect)
Windows version:
- automatically apply IPS patch if it exists (configurable)
- added save/load support in the memory viewer
- added support for filters in 32-bit mode for all filters
- added AVI writing support (no sound yet)
- memory viewer now displays current edit address
- removed some test code introduced at version 1.1 that slows down the emulator
- fixed missing check marks on layers menu
- fixed bug showing maker code/name from some old games
SDL version:
- added support for long options
- added support for passing configuration file name
- added profiling support (GMON format - see README)
- added support for filters in 32-bit mode for all filters
- automatically apply IPS patch if it exists
- improved search for configuration file: current directory, user directory,
  executable directory (in order) are searched
- fixed configuration problem with saveType and removeIntros
Porting:
- fixed big endian problems in SGB code
- fixed big endian problems with rotated sprites
- fixed big endian sound endianess

Version 1.2:

Core changes:
- added MidiKey2Freq bios call (thanks Chris Moeller)
- added AdvanceMAME Scale2x and Simple 2x filters
- added support for higher frameskip (up to 9)
- added C core for portability
- added big endian support
- added support for movement sensor (thanks Parasyte)
- added support for selecting save type available
- fixed another value for the bios protection
- fixed sound envelope reload bug (thanks jaymzj)
- fixed timer counter (not changing the value of the counter unless the timer
  overflows or is restarted)
- fixed problem on big endian when setting IO memory reable positions
- fixed reset LCD after disabling forced blank
- speed up now uses frameskip 9 (6 FPS)
- improved message when BIOS function cannot be emulated
Windows changes:
- added freeze recent list option