@@ -13,6 +13,7 @@ Windows version:
 - added save/load support in the memory viewer
 - added support for filters in 32-bit mode for all filters
 - added AVI writing support (no sound yet)
+- can now pause emulator before loading any file
 - memory viewer now displays current edit address
 - removed some test code introduced at version 1.1 that slows down the emulator
 - fixed missing check marks on layers menu
